Fix: Audience creation notice on small viewports.

--- a/assets/sass/components/analytics-4/audience-segmentation/_googlesitekit-audience-selection-panel.scss
+++ b/assets/sass/components/analytics-4/audience-segmentation/_googlesitekit-audience-selection-panel.scss
@@ -234,6 +234,11 @@
 			margin-bottom: 12px;
 			padding: 14px $grid-gap-phone;
 
+			@media (max-width: $bp-xsmallOnly) {
+				flex-direction: column;
+				text-align: center;
+			}
+
 			.googlesitekit-audience-creation-error-notice__content {
 				display: flex;
 				flex-direction: column;
